Stop layout breaking for narrow windows

--- a/app/assets/stylesheets/base/_grid.scss
+++ b/app/assets/stylesheets/base/_grid.scss
@@ -11,13 +11,9 @@ $gutter: 1.25em;
 .grid-container{
     margin: 0 auto;
     clear:both;
-    width: 100%;
-    max-width:100%;
     padding: ($gutter/2) 0;
     
-    @media( min-width: 60em ){
-        width: $max_page_width;
-    }
+    width: $max_page_width;
 }
 
 .grid{
